update ui and changes in backend